--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 
 <div class="container">
-  <div class="container">
     <div class="banner">
       <div class="row">
         <div class="col-md-4 title">
@@ -10,12 +9,14 @@
         </div>
         <div class="col-md-8 photo">
           <i class="fas fa-quote-left" id="quote"></i>
-          <p id="citation">Le jeu est la forme la plus élevée de la recherche</p>
-          <p id="author">Albert Einstein</p>
+          <div class="citation-all">
+            <p id="citation">Le jeu est la forme la plus élevée de la recherche</p>
+            <p id="author">Albert Einstein</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
 
 
   <div class="search">
