--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -26,3 +26,15 @@
     border: 1px solid rgb(40,40,50);
   }
 }
+
+@media (max-width: 396px) {
+  .btn-black {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 360px) {
+ .btn-black {
+    font-size: 12px;
+  }
+}
