--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -95,6 +95,13 @@
   display: none;
 }
 
+
+@media (max-width: 992px) {
+  .navbar-bbgc img {
+    width: 90px;
+  }
+}
+
 @media (max-width: 768px) {
   .new-article {
     display: none;
