--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -78,3 +78,21 @@
   display: flex;
   animation-duration: 1.5s;
 }
+
+
+@media (max-width: 768px) {
+  #map {
+    margin-top: 30px;
+  }
+  .club-description {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+}
+
+@media (max-width: 576px) {
+  #map {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
