--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -62,3 +62,17 @@
 .tool-bar-item {
   padding: 10px;
 }
+.end {
+  text-align: right;
+}
+
+.back {
+  color: black;
+  // font-weight: bolder;
+  opacity: 0.7;
+  &:hover {
+    color: black;
+    text-decoration: none;
+    opacity: 1;
+  }
+}
