--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,27 +1,25 @@
 
 <div class="container" id="contact-form">
-    <h2 class="">Contactez-nous</h2>
-    <div class="contact-form">
-      <%= simple_form_for @contact  do |f| %>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
-              <%= f.text_field :name, placeholder: "Nom", class: "form-control"%>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
-              <%= f.text_field :email, placeholder: "email", class: "form-control" %>
-            </div>
-          </div>
+  <h2>Contactez-nous</h2>
+  <%= simple_form_for @contact  do |f| %>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        <div class="form-group">
+          <%= f.text_field :name, placeholder: "Nom", class: "form-control"%>
         </div>
-        <div class="form-group" >
-          <%= f.text_area :message, placeholder: "message", class: "form-control" %>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="form-group">
+          <%= f.text_field :email, placeholder: "email", class: "form-control" %>
         </div>
-        <div>
-          <%= f.submit "Envoyer", class:"btn-black" %>
-        </div>
-      <% end %>
+      </div>
     </div>
-  </div>
+    <div class="form-group" >
+      <%= f.text_area :message, placeholder: "message", class: "form-control" %>
+    </div>
+    <div>
+      <%= f.submit "Envoyer", class:"btn-black" %>
+    </div>
+  <% end %>
+</div>
 
