--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,9 +6,13 @@
           <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= f.error_notification %>
             <div class="form-inputs">
+              <%= f.input :first_name,
+                          autofocus: true,
+                          required: false %>
+              <%= f.input :last_name,
+                          required: false %>
               <%= f.input :email,
                           required: true,
-                          autofocus: true,
                           input_html: { autocomplete: "email" }%>
               <%= f.input :password,
                           required: true,
