--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,9 +8,9 @@
             <div class="form-inputs">
               <%= f.input :first_name,
                           autofocus: true,
-                          required: false %>
+                          required: true %>
               <%= f.input :last_name,
-                          required: false %>
+                          required: true %>
               <%= f.input :email,
                           required: true,
                           input_html: { autocomplete: "email" }%>
