--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -27,6 +27,12 @@
   }
 }
 
+.btn-new-review {
+  margin: 30px 0px;
+  text-align: center;
+  cursor: pointer;
+}
+
 @media (max-width: 396px) {
   .btn-black {
     font-size: 14px;
