--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -108,3 +108,27 @@
   font-weight: lighter;
   font-size: 14px;
 }
+
+.card-reviews {
+  border-bottom: 1px solid $orange;
+  margin-bottom: 10px;
+}
+
+#name {
+  font-weight: bolder;
+  margin-bottom: 0px;
+}
+
+#date {
+  font-weight: lighter;
+  opacity: 0.6;
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+#review-content {
+  font-size: 15px;
+}
+
+
+
