--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -45,3 +45,10 @@ textarea.form-control {
   margin-bottom: 1.5rem;
 }
 
+textarea#review_content {
+  font-size: 12px;
+}
+
+.review-form {
+  display: none;
+}
