--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,5 @@
 // Import Google fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700&display=swap');
 
 // Define fonts for body and headers
@@ -16,7 +16,8 @@
 // }
 // $my-font: "Font Name";
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Montserrat:300,500,900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swap');
+// @import url('https://fonts.googleapis.com/css?family=Bitter:400,700&display=swap');
 $body-font: 'Montserrat', sans-serif;
 $headers-font: 'Merriweather', serif;
