center the text for reviews zone

--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -102,6 +102,7 @@
 .review-part {
   margin: 30px 0px;
   background-color: #DDDDDD;
+  text-align: center;
   padding: 4px 25px;
   opacity: 0.8;
 }
