--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,16 +18,17 @@
     </div>
 
 
-
-  <div class="search">
-    <%= form_tag root_path, method: :get do %>
-        <div class="form-group d-flex justify-content-center">
-          <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "trouver un article" %>
-          <%= button_tag(type: "submit", class: "btn-black") do %>
-            <i class="fas fa-search"></i> Rechercher
-          <% end %>
-        </div>
-    <% end %>
+  <div class="section" id="searchzone">
+    <div class="search">
+      <%= form_tag root_path(anchor: 'searchzone'), method: :get do %>
+          <div class="form-group d-flex justify-content-center">
+            <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "trouver un article" %>
+            <%= button_tag(type: "submit", class: "btn-black") do %>
+              <i class="fas fa-search"></i> Rechercher
+            <% end %>
+          </div>
+      <% end %>
+    </div>
   </div>
 
 
