--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,12 +5,12 @@
     <div class="row">
       <div class="col-xs-12 col-sm-6">
         <div class="form-group">
-          <%= f.input :title, class:"form-control"%>
+          <%= f.input :title, label: "Titre", class:"form-control"%>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6">
         <div class="form-group">
-          <%= f.input :category, collection: Article::CATEGORY, class:"form-control"%>
+          <%= f.input :category, label: "Catégorie", collection: Article::CATEGORY, class:"form-control"%>
         </div>
       </div>
     </div>
@@ -23,3 +23,24 @@
 </div>
 
 
+
+<!-- <div class="new-paragraph"> -->
+    <%#= simple_form_for @paragraph do |f| %>
+      <!-- <div class="row"> -->
+        <!-- <div class="col-xs-12 col-sm-6"> -->
+          <!-- <div class="form-group"> -->
+            <%#= f.input :title, label: "Titre", class:"form-control"%>
+          <!-- </div> -->
+        <!-- </div> -->
+        <!-- <div class="col-xs-12 col-sm-6"> -->
+          <!-- <div class="form-group"> -->
+            <%#= f.input :photo, as: :file %>
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
+      <!-- <div class="form-group"> -->
+        <%#= f.text_area :content, class:"form-control" %>
+      <!-- </div> -->
+      <%#= f.submit "valider", class:"btn-black" %>
+    <%# end %>
+  <!-- </div> -->
