hide form for paragraph

--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -37,13 +37,16 @@
 }
 
 .article-content h1 {
+  font-family: 'Montserrat', sans-serif;
   padding-bottom: 2rem;
   margin-bottom: 0;
 }
 
+
 .paragraph h6 {
   display: inline-block;
   font-family: 'Montserrat', sans-serif;
+  font-size: 1.10rem;
   padding-right: 1rem;
   border-bottom: 1px solid $orange;
 }
@@ -73,6 +76,7 @@
   opacity: 0.7;
   &:hover {
     opacity: 1;
+    cursor: pointer;
   }
 }
 
@@ -99,10 +103,11 @@
   opacity: 0.7;
   &:hover {
     opacity: 1;
+    cursor: pointer;
   }
 }
 
-#trash {
+.marginleft {
   margin-left: 30px;
 }
 
