--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -52,6 +52,9 @@ textarea#review_content {
 .review-form {
   display: none;
 }
+.paragraph-form {
+  display: none;
+}
 
 .visible {
   display: block;
