--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -10,26 +10,46 @@
   text-align: justify;
 }
 
-.photo-first-article {
-  display: flex;
-  justify-content: center;
-  border: 2px solid white;
-  &:hover {
-    border: 2px solid $orange;
-  }
-}
+// .photo-first-article {
+//   display: flex;
+//   justify-content: center;
+//   border: 2px solid white;
+//   &:hover {
+//     border: 2px solid $orange;
+//   }
+// }
 
 .survol {
   height: 350px;
   width: 100%;
+  background-position: center;
+  background-size: cover;
   object-fit: cover;
-  // opacity: 0.8;
   &:hover {
     cursor: pointer;
-    // opacity: 1;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    // -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
     filter: grayscale(100%);
+    transition-duration: 1s;
   }
+}
+
+#modal-link {
+  color: white;
+  opacity: 0;
+  border: 1px solid black;
+  // width: 100%;
+  // height: 100%;
+  text-align: center;
+  &:hover {
+    opacity: 1;
+    transition-duration: 1s;
+  }
+}
+
+.fade-opacity {
+  color: red;
+  // transition-property: opacity;
+  // transition-duration: 1s;
 }
 
 .article-content {
@@ -56,6 +76,13 @@
   font-size: 1.10rem;
   padding-right: 1rem;
   border-bottom: 1px solid $orange;
+}
+
+.paragraph img {
+  height: 250px;
+  width: 70%;
+  object-fit: cover;
+  margin-bottom: 1rem;
 }
 
 .carousel-item img {
