typed js for citation

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
         <div class="col-md-8 photo">
           <i class="fas fa-quote-left" id="quote"></i>
           <div class="citation-all">
-            <p id="citation">Le jeu est la forme la plus élevée de la recherche</p>
-            <p id="author">Albert Einstein</p>
+            <span id="citation"></span>
+            <p id="author"></p>
           </div>
         </div>
       </div>
