put a container for edit paragraph form

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -33,7 +33,7 @@ textarea.form-control {
 }
 
 
-.article-form {
+.edit-form {
   padding-top: 80px;
   padding-bottom: 80px;
   & textarea.form-control {
@@ -41,7 +41,7 @@ textarea.form-control {
   }
 }
 
-.article-form h2 {
+.edit-form h2 {
   margin-bottom: 1.5rem;
 }
 
