--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container article-form">
+<div class="container edit-form">
   <h2>modifier l'article</h2>
 
   <%= simple_form_for @article do |f| %>
