--- a/app/views/paragraphs/edit.html.erb
+++ b/app/views/paragraphs/edit.html.erb
@@ -1,18 +1,21 @@
-<%= simple_form_for [@article, @paragraph] do |f| %>
-  <div class="row">
-    <div class="col-xs-12 col-sm-6">
-      <div class="form-group">
-        <%= f.input :title, label: "sous titre"%>
+<div class="container edit-form">
+  <h2>modifier le paragraphe</h2>
+  <%= simple_form_for [@article, @paragraph] do |f| %>
+    <div class="row">
+      <div class="col-xs-12 col-sm-6">
+        <div class="form-group">
+          <%= f.input :title, label: "sous titre"%>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6">
+        <div class="form-group">
+          <%= f.input :photo, as: :file, class:"form-control" %>
+        </div>
       </div>
     </div>
-    <div class="col-xs-12 col-sm-6">
-      <div class="form-group">
-        <%= f.input :photo, as: :file, class:"form-control" %>
-      </div>
+    <div class="form-group">
+      <%= f.input :content, label: "texte" %>
     </div>
-  </div>
-  <div class="form-group">
-    <%= f.input :content, label: "texte" %>
-  </div>
-  <%= f.submit "Valider", class:"btn-black"%>
-<% end %>
+    <%= f.submit "Valider", class:"btn-black"%>
+  <% end %>
+</div>
