correct text on banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-4 title">
           <div>
-            <h1>Broceliande BackGammon Club</h1>
+            <h1>Brocéliande BackGammon Club</h1>
           </div>
         </div>
         <div class="col-md-8 photo">
