--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="show-article row">
-  <div class="article col-sm-12 col-md-8">
+  <div class="article col-xs-12 col-sm-12 col-md-8">
     <!-- tool bar -->
     <% if user_signed_in? && policy(@article).update? %>
       <div class="d-flex flex-column tool-bar-left">
@@ -16,11 +16,7 @@
     <!-- <div class="photo-first-article "> -->
       <% if @article.photos.first %>
         <div class="survol d-flex justify-content-center align-content-stretch" id="photo-link" data-toggle="modal" data-target="#bbgcModal" style="background-image: url('<%= cl_image_path @article.photos.first.key %>');" >
-          <div class="row">
-            <div class="col-xs-12">
-              <div class="flex-grow-1 d-flex align-items-center justify-content-center" id="modal-link"><span>Voir toutes les photos</span></div>
-            </div>
-          </div>
+          <div class="flex-grow-1 d-flex align-items-center justify-content-center" id="modal-link"><span>Voir toutes les photos</span></div>
         </div>
       <% else %>
         <%= image_tag 'https://cdn.pixabay.com/photo/2019/02/25/11/39/backgammon-board-4019437__340.jpg', class:"survol"%>
