--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -76,9 +76,9 @@
 }
 
 .paragraph img {
-  height: auto;
-  width: 70%;
-  object-fit: cover;
+  // height: auto;
+  width: 80%;
+  // object-fit: cover;
   margin-bottom: 1rem;
 }
 
