--- a/app/assets/stylesheets/components/_article.scss
+++ b/app/assets/stylesheets/components/_article.scss
@@ -74,12 +74,17 @@
   padding-right: 1rem;
   border-bottom: 1px solid $orange;
 }
+.paragraph-photo {
+  width: 70%;
+  margin-bottom: 1rem;
+  border: 1px solid black;
+  margin: 0 auto;
+}
 
 .paragraph img {
   // height: auto;
-  width: 80%;
-  // object-fit: cover;
-  margin-bottom: 1rem;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .carousel-item img {
