--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -69,7 +69,7 @@
         <div class="paragraph">
           <% @article.paragraphs.each do |paragraph| %>
             <% if paragraph.photo.attached? %>
-              <div class="d-flex justify-content-center paragraph-photo">
+              <div class="paragraph-photo">
                 <%= cl_image_tag paragraph.photo.key %>
               </div>
             <% end %>
